less/base.less
body, html {
	height: 100%;
	background: #fff;
	font: 400 16px 'Open Sans', sans-serif;
	color: #3b3b3b;
	padding: 0;
	margin: 0;
}

body {
	padding-top: 72px;
}

h1, h2, h3, h4 {
	margin: 30px 0;
	font: 700 34px Domine, serif;
	line-height: 56px;
	color: #262b30;
}
h2 {
	margin: 30px 0 20px;
	font: 700 26px Domine,Serif;
}
h3 {
	margin: 20px 0 10px;
	font: 600 22px 'Open Sans', sans-serif;
}
h4 {
	margin: 20px 0 10px;
	font: 600 20px 'Open Sans', sans-serif;
}

hr {
	width: 70%;
	height: 3px;
	margin: 30px auto;
	border: 0;
	background: #d8d6de;
}

p {
	margin: 30px 0;
	line-height: 38px;
	color: #333332;
	word-wrap: break-word;
}

blockquote,
cite,
q {
	margin: 30px 0 30px -30px;
	border-left: 3px solid #c6d5e1;
	padding: 5px 0 5px 30px;
	line-height: 38px;
	color: #888;
	font: 400 22px 'Gentium Basic', serif;
}
@media screen and (max-width: 800px) {
	blockquote,
	cite,
	q {
		margin-left: 0;
	}
}

blockquote.pullquote {
	font-size: 24px;
	margin: 48px -100px;
	padding: 0;
	text-align: center;
	border: none;
}
@media screen and (max-width: 1000px) {
	blockquote.pullquote {
		margin-left: 0;
		margin-right: 0;
	}
}

blockquote cite,
blockquote p,
cite p,
q p {
	margin:0;
	padding:0;
	border: none;
	color: #888;
	font-style: italic;
}
blockquote cite {
	color: #bbb;
}

blockquote i,
blockquote em {
	font-style: normal;
}

h1 a:hover,
p a:hover {
	border-bottom: 3px solid #f1ece9;
	text-decoration: none;
}

a:link,
a:visited {
	text-decoration: none;
	border-bottom: 3px solid transparent;
	-webkit-transition: border .2s,color .2s ease-out;
	-moz-transition: border .2s,color .2s ease-out;
	-o-transition: border .2s,color .2s ease-out;
	transition: border .2s,color .2s ease-out;
}

p img {
	margin: 30px 0;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}

code {
	padding: 2px 6px;
	margin: 0 5px;
	background: #f3f3f3;
	border: 1px solid #e6e6e6;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}

pre {
	background: #313339;
	border: 0;
	color: #fff;
	margin: 40px 0;
	font: 500 15px 'Source Code Pro', sans-serif;
	line-height: 28px;
	padding: 25px 35px;
	overflow-x: auto;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}

input.search-field {
	cursor: auto;
}

ul.inline {
	margin: 0;
}

ul.inline li {
	display: inline-block;
	margin-right: 10px;
}
ul.inline li:after {
	display: inline-block;
	content: '\2022';
	color: #ccc;
	padding-left: 10px;
}
ul.inline li:last-child:after {
	display: none;
}

img.avatar {
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
}

// quote format styling
.format-quote blockquote {
	font-size: 200%;
	border-color: transparent;
	position: relative;
	padding: 0;
	margin: 30px 0;
}
@media screen and (max-width: 1000px) {
	.format-quote blockquote {
		margin-left: 50px;
	}
}
.format-quote blockquote:before {
	position: absolute;
	top: -10px;
	left: -50px;
	content: '“';
	font-size: 250%;
	opacity: 0.3;
}

// link format styling
.format-link a.special {
	display: block;
	color: #686868;
	font-weight: 600;
	text-align: center;
	border: 2px solid #c3c2c9;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	-webkit-transition: all .2s ease-in-out;
	-moz-transition: all .2s ease-in-out;
	-o-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;
}
.format-link a.special:hover {
	border: 2px solid #0066d9;
	background: #0066d9;
	color: #fff;
}

